SERVER-12426 updated max BSON timestamp to depend on OpTime::max() which is defined as max(int32_t) seconds since epoch.